# autotuning-cuda

./: CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Autotuning/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Autotuning/examples/matrix/: README.md
Autotuning/flamingo/: __init__.py
Autotuning/flamingo/cli/: __init__.py  main.py  themes.py  utils.py
Autotuning/flamingo/core/: __init__.py  autotuner.py  config.py
Autotuning/flamingo/migration/: __init__.py  converter.py
Autotuning/flamingo/plugins/: __init__.py  interface.py  manager.py
Autotuning/tests/: __init__.py
Autotuning/tuner/: helpers.py  output.py  tune.py  tune_conf.py
docs/: CHANGES_parallel_evaluation.md  CLI_GUIDE.md  ISSUES.md  MIGRATION_GUIDE.md  credits.md  developer-guide.md  examples-guide.md  github-setup-guide.md  user-guide.md  utilities-guide.md
tasks/: prd-python3-conversion.md
